# pliron

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs-pages-index.html
examples/kaleidoscope/: ast.rs  dialect.rs  main.rs
kaleidoscope/: book.toml
kaleidoscope/src/: examples-index.md
pliron-derive/src/: derive_attr.rs  derive_attr_impl.rs  derive_op.rs  derive_op_impl.rs  derive_type.rs  derive_type_impl.rs  lib.rs  py_type_mapper.rs  reflect.rs
pliron-llvm/: Cargo.toml
pliron-llvm/llvm-opt/src/: main.rs
pliron-llvm/src/: interface_impls.rs  ops.rs
pliron-llvm/tests/: compile_run.rs
pliron-python/: Cargo.toml  README.md  pyproject.toml
pliron-python-derive/: Cargo.toml
pliron-python-derive/src/: attr_class.rs  attr_impl.rs  envelope.rs  lib.rs  op_class.rs  op_impl.rs  py_type_mapper.rs  registration.rs  type_class.rs  type_impl.rs
pliron-python/docs/: 01-architecture.md  02-pymap-and-codegen.md  03-core-classes.md  04-python-api-reference.md  05-extending.md  06-type-exposure.md  07-module-layout.md  README.md
pliron-python/python/pliron/: __init__.py  __init__.pyi
pliron-python/src/: attributes.rs  basic_block.rs  context.rs  lib.rs  operation.rs  py_map.rs  region.rs  types.rs  value.rs
pliron-python/src/dialects/: builtin.rs  mod.rs
pliron-python/src/irbuild/: cloning.rs  inserter.rs  listener.rs  mod.rs  rewriter.rs
pliron-python/tests/: test_bindings.py
src/: lib.rs  op.rs  operation.rs  type.rs
src/builtin/: attributes.rs  op_interfaces.rs  ops.rs  types.rs
src/opts/: simplify_cfg.rs
src/opts/constants/: sccp.rs
src/python/: attributes.rs  basic_block.rs  context.rs  mod.rs  operation.rs  py_map.rs  region.rs  types.rs  value.rs
src/python/irbuild/: builder.rs  cloning.rs  inserter.rs  listener.rs  mod.rs  rewriter.rs
src/utils/: apfloat.rs
tests/opts/: main.rs  sccp.rs  simplify_cfg.rs  test_ops.rs
