[package]
name = "pliron-python-derive"
description = "Python-binding code generation macros for pliron"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true

syn = { version = "2", features = ["derive", "full", "parsing"] }

[dev-dependencies]
prettyplease.workspace = true
expect-test.workspace = true
