[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pliron"
version = "0.1.0"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "pytest>=9.0.2",
]

[tool.maturin]
python-source = "python"
# The native extension is an implementation detail; the underscore keeps it
# clearly private (`pliron._pliron`), with the shim re-exporting everything.
module-name = "pliron._pliron"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
